tests/recheck_spread/recheck_spread.exp
Run flow on commit A
No errors!

Run flow on commit B
Error ----------------------------------------------------------------------------------------------------- test.js:5:14

Cannot assign object literal to `x` because:
 - property `bar` is missing in object literal [1] but exists in `X` [2].
 - property `foo` is missing in `X` [2] but exists in object literal [1].

   test.js:5:14
   5| const x: X = {foo: 3};
                   ^^^^^^^^ [1]

References:
   test.js:5:10
   5| const x: X = {foo: 3};
               ^ [2]



Found 2 errors
